Sprint2 backend unit tests and docs (#46)
* updated swagger docs and tests

* Update imageStore_test.go

* Create backend_tests.png

* Update Sprint2.md
